<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Listado de Eventos</string>
    <string name="title_add_event">Añadir Evento</string>
    <string name="title_event_list">Lista de Eventos</string>
    <string name="hint_event_name">Nombre del evento</string>
    <string name="hint_event_description">Descripción</string>
    <string name="hint_event_date">Fecha</string>
    <string name="hint_event_address">Dirección</string>
    <string name="hint_event_price">Precio</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="fab_add_event_description">Agregar evento</string>
</resources>

