<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventActivity">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:padding="18dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_event_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="0dp"
        android:padding="18dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_event_description"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="0dp"
        android:padding="18dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_event_address"
        app:layout_constraintTop_toBottomOf="@id/et_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <EditText
        android:id="@+id/et_date"
        android:layout_width="0dp"
        android:padding="18dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_event_date"
        app:layout_constraintTop_toBottomOf="@id/et_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <EditText
        android:id="@+id/et_price"
        android:padding="18dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_event_price"
        app:layout_constraintTop_toBottomOf="@id/et_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        app:layout_constraintTop_toBottomOf="@id/et_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_cancel"
        android:layout_margin="16dp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        app:layout_constraintTop_toBottomOf="@id/et_price"
        app:layout_constraintStart_toEndOf="@id/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
